tests/facebookisms/facebookisms.exp
Error: copyProperties.js:6
  6:     (copyProperties()); // error, unknown global
          ^^^^^^^^^^^^^^ copyProperties. Could not resolve name

Error: copyProperties.js:31
 31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                ^^^ Cannot cast `copyProperties(...)` to object type because in property `foo`, string [1] is incompatible with number [2].
  References:
   31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                  ^^^ [1]: string
   31:     (copyProperties({ foo: 'a' }): { foo: number }); // err, num !~> string
                                                 ^^^^^^ [2]: number

Error: invariant.js:6
  6:     invariant(x, 'truthy only'); // error, forgot to require invariant
         ^^^^^^^^^ invariant. Could not resolve name

Error: mergeInto.js:6
  6:     (mergeInto()); // error, unknown global
          ^^^^^^^^^ mergeInto. Could not resolve name

Error: test.js:6
  6:     var x: string = this.x;
                         ^^^^^^ number. This type is incompatible with
  6:     var x: string = this.x;
                ^^^^^^ string

Error: test.js:7
  7:     this.y = "";
              ^ property `y`. Property not found in
  7:     this.y = "";
         ^^^^ Foo


Found 6 errors
